syntax = "proto3";

option go_package = "pb/";
service PostService {
    rpc CreatePost(PostRequest) returns(PostResponse){}
}

message User {
    string username = 1;
    string company = 2;
}

message PostRequest {
    string title = 1;
    string content = 2;
    User user = 3;
    string groupId = 4;
}

message PostResponse {
    int32 status =1;
    string id=2;
    string error=3;
}
